local_deployment/k8s_minikube/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
